fixed ul and ol tags to be aligned properly

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ img {
   border-radius: 20px;
 }
 
+.center {
+  text-align: center;
+  list-style-position: inside;
+}
+
 a:link {color: #D26844} 
 a:visited {color: #CF5C36}
 a:hover {color: #AE5457}
